@@ -1,3 +1,8 @@
+Travel::Status::DE::IRIS 1.22 - Sun Dec 16 2018
+
+    * Add delay code 4 (unforeseen staff shortage, thanks to Fabian Schwarz)
+    * Add delay code (technical failure in carriage, thanks to @marudor)
+
 Travel::Status::DE::IRIS 1.21 - Sun Sep 09 2018
 
     * Fix crash when receiving invalid XML due to network issues
